# curve-core

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  add_liquidity.py  add_liquidity_cryptoswap.py  add_liquidity_stableswap.py  dTRINITY-README.md  deploy_stableswap_pool.py  docker-compose.yaml  example-deployment.yaml  get_pool_info.py  manage.py  notes.md  pyproject.toml  requirements.txt  swap.py
abi/governance/agent/: agent_v_100.json  agent_v_101.json
abi/governance/vault/: vault_v_100.json
abi/helpers/deposit_and_stake_zap/: deposit_and_stake_zap_v_100.json
abi/helpers/rate_provider/: rate_provider_v_100.json  rate_provider_v_101.json
abi/helpers/router/: router_v_110.json  router_v_111.json
abi/helpers/stable_swap_meta_zap/: stable_swap_meta_zap_v_100.json
abi/registries/address_provider/: address_provider_v_201.json
abi/registries/metaregistry/: metaregistry_v_110.json
contracts/governance/agent/: agent_v_100.vy  agent_v_101.vy
contracts/governance/relayer/: relayer_v_100.vy
contracts/governance/vault/: vault_v_100.vy
contracts/helpers/deposit_and_stake_zap/: deposit_and_stake_zap_v_100.vy
contracts/helpers/pool_deployer/: pool_deployer_v_100.vy
contracts/helpers/rate_provider/: rate_provider_v_100.vy  rate_provider_v_101.vy
contracts/helpers/router/: router_v_110.vy  router_v_111.vy  router_v_stablechain.vy
contracts/helpers/stable_swap_meta_zap/: meta_zap_v_100.vy  stable_swap_meta_zap_v_100.vy
contracts/registries/: address_provider_v_200.vy  metaregistry_v_110.vy
contracts/registries/address_provider/: address_provider_v_201.vy
contracts/registries/metaregistry/: metaregistry_v_110.vy
contracts/router/: Router.vy  RouterOptimism.vy  RouterSidechain.vy  RouterSidechainTricryptoMeta.vy
contracts/zaps/deposit_and_stake/: DepositAndStakeZap.vy
deployments/: corn.yaml  corn_DEBUG.yaml  example.yaml  example_arb_orbit.yaml  example_arb_orbit_DEBUG.yaml  example_deployment.yaml  example_op_stack.yaml  example_op_stack_DEBUG.yaml  example_polygon_cdk.yaml  example_polygon_cdk_DEBUG.yaml  example_taiko_DEBUG.yaml  fraxtal_testnet.yaml  neondevnet.yaml  neondevnet_DEBUG.yaml  tac_dev.yaml  taiko.yaml  testchain.yaml  tutorial_arb_sepolia.yaml
deployments/debug/: arb_sepolia.yaml  debug.yaml  hyperliquid.yaml  ink.yaml  plasma.yaml  stable.yaml
deployments/devnet/: arb_sepolia.yaml  arc.yaml  bsc_testnet.yaml  etherlink.yaml  expchain.yaml  hyperliquid.yaml  hyperliquid_devnet.yaml  hyperliquid_devnet_DEBUG.yaml  megaeth.yaml  monad.yaml  neon.yaml  neondevnet.yaml  oortdevnet9700.yaml  plasma.yaml  plume.yaml  stable.yaml  strata.yaml  tac.yaml  tac_testnet.yaml  tutorial_arb_sepolia.yaml
deployments/examples/: example_DEBUG.yaml  example_arb_orbit_DEBUG.yaml  example_op_stack_DEBUG.yaml  example_polygon_cdk_DEBUG.yaml  example_taiko_DEBUG.yaml
deployments/prod/: aurora.yaml  avalanche.yaml  celo.yaml  corn.yaml  etherlink.yaml  fantom.yaml  hyperliquid.yaml  ink.yaml  kava.yaml  monad.yaml  moonbeam.yaml  plasma.yaml  plume.yaml  sonic.yaml  stable.yaml  tac.yaml  taiko.yaml  unichain.yaml  x_layer.yaml  xdc.yaml
scripts/: command_options.py  deploy_infra.py  logging_config.py
scripts/deploy/: __init__.py  boa_patch.py  constants.py  deployment_file.py  deployment_utils.py  models.py  presets.py  utils.py
scripts/deploy/amm/: stableswap.py  tricrypto.py  twocrypto.py
scripts/deploy/gauge/: brownie_deploy.py  child_gauge.py
scripts/deploy/governance/: xgov.py
scripts/deploy/helpers/: deposit_and_stake_zap.py  rate_provider.py  router.py  stable_swap_meta_zap.py
scripts/deploy/registries/: address_provider.py  metaregistry.py
scripts/deploy/test_pools/: __init__.py  deploy_pool.py  deploy_tokens.py  liquidity_and_swap.py
scripts/deployment/: router.py  utils.py
scripts/old/router/: router_deploy.py
scripts/tests/: __init__.py  pre_deploy.py  pre_deployment.py
scripts/tests/post_deploy/: __init__.py  gauge.py  helpers.py  registries.py  utils.py  xgov.py
scripts/utils/: hyperevm_enable_big_blocks.py
scripts/zaps/router/: router_deploy.py
settings/: config.py  env.example  logger.py  models.py
settings/chains/: corn.yaml  ethereum.yaml  example.yaml  example_arb_orbit.yaml  example_op_stack.yaml  example_polygon_cdk.yaml  example_taiko.yaml  fraxtal_testnet.yaml  neondevnet.yaml  tac_dev.yaml  taiko.yaml  tutorial_arb_sepolia.yaml
settings/chains/devnet/: arb_sepolia.yaml  arc.yaml  bsc_testnet.yaml  etherlink.yaml  expchain.yaml  hyperliquid.yaml  hyperliquid_devnet.yaml  megaeth.yaml  monad.yaml  neon.yaml  neondevnet.yaml  plasma.yaml  plume.yaml  stable.yaml  strata.yaml  tac.yaml  tac_testnet.yaml  tutorial_arb_sepolia.yaml
settings/chains/examples/: example.yaml  (+3 more)
tests/: pre_deploy.py
tutorial/: README.MD  add_liquidity.py  deploy_gauge_and_add_rewards.py  deploy_test_crv_and_crvusd.py  swap.py
tutorial/contracts/: ERC20mock.vy
(+96 files in other folders)
